--- a/conf/defaults.ini
+++ b/conf/defaults.ini
@@ -407,10 +407,10 @@ sigv4_auth_enabled = false
 #################################### Anonymous Auth ######################
 [auth.anonymous]
 # enable anonymous access
-enabled = false
+enabled = true
 
 # specify organization name that should be used for unauthenticated users
-org_name = Main Org.
+org_name = Fusebit
 
 # specify role for unauthenticated users
 org_role = Viewer
