--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -21,6 +21,7 @@
     "slate",
     "slate-plain-serializer",
     "systemjs",
+    "copy-webpack-plugin", // try to upgrade with newer yarn release. Not working with 3.1.1
     "ts-loader", // we should remove ts-loader and use babel-loader instead
     "ora" // we should bump this once we move to esm modules
   ],
