--- a/.github/workflows/detect-breaking-changes-build.yml
+++ b/.github/workflows/detect-breaking-changes-build.yml
@@ -3,27 +3,23 @@ name: Levitate / Detect breaking changes
 on: pull_request
 
 jobs:
-  build:
-    name: Detect
+  buildPR:
+    name: Build PR
     runs-on: ubuntu-latest
-    env:
-      GITHUB_STEP_NUMBER: 7
+    defaults:
+      run:
+        working-directory: './pr'
 
     steps:
     - uses: actions/checkout@v2
+      with: 
+        path: './pr'
 
     - name: Setup environment
       uses: actions/setup-node@v2.5.1
       with:
         node-version: '16'
-
-    - name: Get link for the Github Action job
-      id: job
-      uses: actions/github-script@v5
-      with:
-        script: |
-            const script = require('./.github/workflows/scripts/pr-get-job-link.js')
-            await script({github, context, core})
+        cache: 'yarn'
       
     - name: Install dependencies
       run: yarn install --immutable
@@ -31,24 +27,98 @@ jobs:
     - name: Build packages
       run: yarn packages:build
 
-    - name: Detect breaking changes
-      id: breaking-changes
-      run: ./scripts/check-breaking-changes.sh 
-      env:
-        FORCE_COLOR: 3
-        GITHUB_JOB_LINK: ${{ steps.job.outputs.link }}
-
-    - name: Persisting the check output
-      run: |
-          mkdir -p ./levitate
-          echo "{ \"exit_code\": ${{ steps.breaking-changes.outputs.is_breaking }}, \"message\": \"${{ steps.breaking-changes.outputs.message }}\", \"job_link\": \"${{ steps.job.outputs.link }}#step:${GITHUB_STEP_NUMBER}:1\" }" > ./levitate/result.json
-
     - name: Upload check output as artifact
       uses: actions/upload-artifact@v2
       with:
-        name: levitate
-        path: levitate/
+        name: buildPr
+        path: './pr'
+
+  buildMain:
+    name: Build Main
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: './main'
+
+    steps:
+    - uses: actions/checkout@v2
+      with: 
+        path: './main'
+        ref: 'main'
+
+    - name: Setup environment
+      uses: actions/setup-node@v2.5.1
+      with:
+        node-version: '16'
+        cache: 'yarn'
       
-    - name: Exit
-      run: exit ${{ steps.breaking-changes.outputs.is_breaking }}
-      shell: bash
+    - name: Install dependencies
+      run: yarn install --immutable
+
+    - name: Build packages
+      run: yarn packages:build
+  
+    - name: Upload check output as artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: buildMain
+        path: './main'
+
+  Detect:
+    name: Detect breaking changes
+    runs-on: ubuntu-latest
+    needs: ['buildPR', 'buildMain']
+    env:
+      GITHUB_STEP_NUMBER: 7
+
+    steps:
+      - name: Get output from pr
+        uses: actions/download-artifact@v2
+        with:
+          name: buildPr
+          path: './pr'
+
+      - name: Get output from main
+        uses: actions/download-artifact@v2
+        with:
+          name: buildMain
+          path: './main'
+
+      - name: Display structure of downloaded files
+        run: ls -R
+        working-directory: './pr'
+
+      - name: Display structure of downloaded files
+        run: ls -R
+        working-directory: './main'
+
+
+    # - name: Get link for the Github Action job
+    #   id: job
+    #   uses: actions/github-script@v5
+    #   with:
+    #     script: |
+    #         const script = require('./.github/workflows/scripts/pr-get-job-link.js')
+    #         await script({github, context, core})
+
+    # - name: Detect breaking changes
+    #   id: breaking-changes
+    #   run: ./scripts/check-breaking-changes.sh 
+    #   env:
+    #     FORCE_COLOR: 3
+    #     GITHUB_JOB_LINK: ${{ steps.job.outputs.link }}
+
+    # - name: Persisting the check output
+    #   run: |
+    #       mkdir -p ./levitate
+    #       echo "{ \"exit_code\": ${{ steps.breaking-changes.outputs.is_breaking }}, \"message\": \"${{ steps.breaking-changes.outputs.message }}\", \"job_link\": \"${{ steps.job.outputs.link }}#step:${GITHUB_STEP_NUMBER}:1\" }" > ./levitate/result.json
+
+    # - name: Upload check output as artifact
+    #   uses: actions/upload-artifact@v2
+    #   with:
+    #     name: levitate
+    #     path: levitate/
+      
+    # - name: Exit
+    #   run: exit ${{ steps.breaking-changes.outputs.is_breaking }}
+    #   shell: bash
