--- a/.github/workflows/detect-breaking-changes-build.yml
+++ b/.github/workflows/detect-breaking-changes-build.yml
@@ -15,12 +15,18 @@ jobs:
       with: 
         path: './pr'
 
-    - name: Setup environment
-      uses: actions/setup-node@v2.5.1
+    - name: Get yarn cache directory path
+      id: yarn-cache-dir-path
+      run: echo "::set-output name=dir::$(yarn config get cacheFolder)"
+    
+    - name: Restore yarn cache
+      uses: actions/cache@v2
+      id: yarn-cache
       with:
-        node-version: '16'
-        cache: 'yarn'
-        path: './pr'
+        path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+        key: yarn-cache-folder-${{ hashFiles('**/yarn.lock', '.yarnrc.yml') }}
+        restore-keys: |
+          yarn-cache-folder-
       
     - name: Install dependencies
       run: yarn install --immutable
@@ -28,11 +34,14 @@ jobs:
     - name: Build packages
       run: yarn packages:build
 
-    - name: Upload check output as artifact
+    - name: Zip built packages
+      run: zip -r ./pr_built_packages.zip ./packages/**/dist
+
+    - name: Upload build output as artifact
       uses: actions/upload-artifact@v2
       with:
         name: buildPr
-        path: './pr'
+        path: './pr/pr_built_packages.zip'
 
   buildMain:
     name: Build Main
@@ -47,24 +56,33 @@ jobs:
         path: './main'
         ref: 'main'
 
-    - name: Setup environment
-      uses: actions/setup-node@v2.5.1
+    - name: Get yarn cache directory path
+      id: yarn-cache-dir-path
+      run: echo "::set-output name=dir::$(yarn config get cacheFolder)"
+    
+    - name: Restore yarn cache
+      uses: actions/cache@v2
+      id: yarn-cache
       with:
-        node-version: '16'
-        cache: 'yarn'
-        path: './main'
+        path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+        key: yarn-cache-folder-${{ hashFiles('**/yarn.lock', '.yarnrc.yml') }}
+        restore-keys: |
+          yarn-cache-folder-
       
     - name: Install dependencies
       run: yarn install --immutable
 
     - name: Build packages
       run: yarn packages:build
-  
-    - name: Upload check output as artifact
+
+    - name: Zip built packages
+      run: zip -r ./main_built_packages.zip ./packages/**/dist
+
+    - name: Upload build output as artifact
       uses: actions/upload-artifact@v2
       with:
         name: buildMain
-        path: './main'
+        path: './main/main_built_packages.zip'
 
   Detect:
     name: Detect breaking changes
@@ -74,53 +92,50 @@ jobs:
       GITHUB_STEP_NUMBER: 7
 
     steps:
-      - name: Get output from pr
+      - uses: actions/checkout@v2
+
+      - name: Get built packages from pr
         uses: actions/download-artifact@v2
         with:
           name: buildPr
-          path: './pr'
 
-      - name: Get output from main
+      - name: Get built packages from main
         uses: actions/download-artifact@v2
         with:
           name: buildMain
-          path: './main'
-
-      - name: Display structure of downloaded files
-        run: ls -R
-        working-directory: './pr'
-
-      - name: Display structure of downloaded files
-        run: ls -R
-        working-directory: './main'
-
-
-    # - name: Get link for the Github Action job
-    #   id: job
-    #   uses: actions/github-script@v5
-    #   with:
-    #     script: |
-    #         const script = require('./.github/workflows/scripts/pr-get-job-link.js')
-    #         await script({github, context, core})
-
-    # - name: Detect breaking changes
-    #   id: breaking-changes
-    #   run: ./scripts/check-breaking-changes.sh 
-    #   env:
-    #     FORCE_COLOR: 3
-    #     GITHUB_JOB_LINK: ${{ steps.job.outputs.link }}
-
-    # - name: Persisting the check output
-    #   run: |
-    #       mkdir -p ./levitate
-    #       echo "{ \"exit_code\": ${{ steps.breaking-changes.outputs.is_breaking }}, \"message\": \"${{ steps.breaking-changes.outputs.message }}\", \"job_link\": \"${{ steps.job.outputs.link }}#step:${GITHUB_STEP_NUMBER}:1\" }" > ./levitate/result.json
-
-    # - name: Upload check output as artifact
-    #   uses: actions/upload-artifact@v2
-    #   with:
-    #     name: levitate
-    #     path: levitate/
       
-    # - name: Exit
-    #   run: exit ${{ steps.breaking-changes.outputs.is_breaking }}
-    #   shell: bash
+      - name: Unzip artifact from pr
+        run: unzip pr_built_packages.zip -d ./pr && rm pr_built_packages.zip
+
+      - name: Unzip artifact from main
+        run: unzip main_built_packages.zip -d ./main && rm main_built_packages.zip
+
+      - name: Get link for the Github Action job
+        id: job
+        uses: actions/github-script@v5
+        with:
+          script: |
+              const script = require('./.github/workflows/scripts/pr-get-job-link.js')
+              await script({github, context, core})
+
+      - name: Detect breaking changes
+        id: breaking-changes
+        run: ./scripts/check-breaking-changes.sh 
+        env:
+          FORCE_COLOR: 3
+          GITHUB_JOB_LINK: ${{ steps.job.outputs.link }}
+
+      - name: Persisting the check output
+        run: |
+            mkdir -p ./levitate
+            echo "{ \"exit_code\": ${{ steps.breaking-changes.outputs.is_breaking }}, \"message\": \"${{ steps.breaking-changes.outputs.message }}\", \"job_link\": \"${{ steps.job.outputs.link }}#step:${GITHUB_STEP_NUMBER}:1\" }" > ./levitate/result.json
+
+      - name: Upload check output as artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: levitate
+          path: levitate/
+        
+      - name: Exit
+        run: exit ${{ steps.breaking-changes.outputs.is_breaking }}
+        shell: bash
