--- a/packages/grafana-ui/package.json
+++ b/packages/grafana-ui/package.json
@@ -159,6 +159,7 @@
     "mock-raf": "1.0.1",
     "postcss": "8.4.5",
     "postcss-loader": "6.2.1",
+    "process": "^0.11.10",
     "raw-loader": "4.0.2",
     "react-docgen-typescript-loader": "3.7.2",
     "react-test-renderer": "17.0.2",
