--- a/packages/grafana-e2e/package.json
+++ b/packages/grafana-e2e/package.json
@@ -4,12 +4,7 @@
   "name": "@grafana/e2e",
   "version": "8.2.7",
   "description": "Grafana End-to-End Test Library",
-  "keywords": [
-    "cli",
-    "grafana",
-    "e2e",
-    "typescript"
-  ],
+  "keywords": ["cli", "grafana", "e2e", "typescript"],
   "repository": {
     "type": "git",
     "url": "http://github.com/grafana/grafana.git",
@@ -50,7 +45,7 @@
     "@mochajs/json-file-reporter": "^1.2.0",
     "blink-diff": "1.0.13",
     "commander": "5.0.0",
-    "cypress": "7.5.0",
+    "cypress": "8.4.1",
     "cypress-file-upload": "5.0.7",
     "execa": "4.0.0",
     "resolve-as-bin": "2.1.0",
