--- a/conf/defaults.ini
+++ b/conf/defaults.ini
@@ -492,6 +492,7 @@ allowed_groups =
 #################################### Okta OAuth #######################
 [auth.okta]
 name = Okta
+icon = okta
 enabled = false
 allow_sign_up = true
 client_id = some_id
@@ -508,6 +509,7 @@ role_attribute_strict = false
 #################################### Generic OAuth #######################
 [auth.generic_oauth]
 name = OAuth
+icon = signin
 enabled = false
 allow_sign_up = true
 client_id = some_id
